crates/cli/tests/snapshots/shim_test__shim_bin__handles_stdin_piped_data.snap
---
source: crates/cli/tests/shim_test.rs
expression: get_assert_output(&assert)
---
start
running
piped data = this data comes from stdin
stop
