crates/cli/tests/snapshots/shim_test__shim_bin__standard_output.snap
---
source: crates/cli/tests/shim_test.rs
expression: get_assert_output(&assert)
---
stdout
stderr


