crates/cli/tests/snapshots/shim_test__shim_bin__waits_for_timeout.snap
---
source: crates/cli/tests/shim_test.rs
expression: get_assert_output(&assert)
---
start
running
stop


